--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>mCal ~ The calendar for your money</h1>
-<p>Make a calendar for each one of your credit or debit accounts to track when you will be charged recurring or one time payments</p>
+<div class="jumbotron">
+  <h1>mCal ~ The calendar for your money</h1>
+  <p>Make a calendar for each one of your credit or debit accounts to track when you will be charged recurring or one time payments</p>
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+</div>
